[gd_scene load_steps=8 format=3 uid="uid://lcievqvnw8xh"]

[ext_resource type="Script" path="res://Menus/player_card_back_selection.gd" id="1_4qlhi"]
[ext_resource type="Texture2D" uid="uid://bd3eeolp5h22g" path="res://assets/Images/rectangleborderyellow.svg" id="4_whssx"]
[ext_resource type="PackedScene" uid="uid://cvgijvugy7wxe" path="res://assets/button_scene.tscn" id="5_pc7gh"]
[ext_resource type="Texture2D" uid="uid://dpqbxplhq7uc" path="res://assets/Images/bigArea.png" id="7_hwia6"]
[ext_resource type="Theme" uid="uid://brkyelj36ne10" path="res://Scripts/maintheme.tres" id="19_uqi7t"]
[ext_resource type="Texture2D" uid="uid://bfv4r7hwpte2q" path="res://assets/Images/buttonpattern2.png" id="20_rpoks"]
[ext_resource type="Texture2D" uid="uid://dsyec6g04gdst" path="res://assets/Images/Buttons/buttonhighlights.svg" id="21_3ifbu"]

[node name="CardBackSelection" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4qlhi")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.411765, 0.0352941, 1)

[node name="TextureRect" type="TextureRect" parent="background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_whssx")

[node name="mainLayout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Heading Seperator" type="VBoxContainer" parent="mainLayout"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="SelectionBox" type="VBoxContainer" parent="mainLayout"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="TitleHeading" parent="mainLayout/SelectionBox" instance=ExtResource("5_pc7gh")]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
mouse_filter = 1

[node name="textBoxes" type="HBoxContainer" parent="mainLayout/SelectionBox/TitleHeading"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0583333
anchor_right = 0.944444
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="mainLayout/SelectionBox/TitleHeading/textBoxes"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = -5

[node name="Label" type="Label" parent="mainLayout/SelectionBox/TitleHeading/textBoxes/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "Select Card Backs"
horizontal_alignment = 1

[node name="TotalMatchesText" type="Label" parent="mainLayout/SelectionBox/TitleHeading/textBoxes/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "0 Total Matches"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="mainLayout/SelectionBox/TitleHeading/textBoxes/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Every 5 matches unlocks a new card back!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="mainLayout/SelectionBox"]
layout_mode = 2
alignment = 1

[node name="clearAllButton" parent="mainLayout/SelectionBox/HBoxContainer" instance=ExtResource("5_pc7gh")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" parent="mainLayout/SelectionBox/HBoxContainer/clearAllButton" index="3"]
theme_override_font_sizes/font_size = 50
text = "Clear All"

[node name="SelectAll" parent="mainLayout/SelectionBox/HBoxContainer" instance=ExtResource("5_pc7gh")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" parent="mainLayout/SelectionBox/HBoxContainer/SelectAll" index="3"]
theme_override_font_sizes/font_size = 50
text = "Select All"

[node name="cardSelection" parent="mainLayout/SelectionBox" instance=ExtResource("5_pc7gh")]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="Texturedtexture" parent="mainLayout/SelectionBox/cardSelection" index="0"]
texture = ExtResource("7_hwia6")

[node name="TextureRect" parent="mainLayout/SelectionBox/cardSelection" index="1"]
offset_bottom = 5.0

[node name="MarginContainer" type="MarginContainer" parent="mainLayout/SelectionBox/cardSelection"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.00556
anchor_bottom = 1.00856
offset_right = -4.0
offset_bottom = 0.149994
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="mainLayout/SelectionBox/cardSelection/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="CardBacks" type="FlowContainer" parent="mainLayout/SelectionBox/cardSelection/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Start Game" type="Button" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.795
anchor_right = 1.0
anchor_bottom = 0.875
offset_top = 0.399963
offset_bottom = -0.00012207
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("19_uqi7t")
theme_override_font_sizes/font_size = 60
text = "Start Game"
icon_alignment = 1
expand_icon = true

[node name="TextureRect2" type="TextureRect" parent="Start Game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_right = 0.000183105
offset_bottom = 0.000244141
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("20_rpoks")

[node name="TextureRect" type="TextureRect" parent="Start Game"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.001
anchor_top = 0.01
anchor_right = 0.999
anchor_bottom = 0.99
offset_left = 0.28
offset_top = 2.0
offset_right = -0.280029
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("21_3ifbu")
expand_mode = 1

[node name="Label" type="Label" parent="Start Game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReturnButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00138889
anchor_top = 0.897688
anchor_right = 1.00139
anchor_bottom = 0.977344
offset_top = -0.0400391
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("19_uqi7t")
theme_override_font_sizes/font_size = 60
text = "Return"
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="ReturnButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = 0.000183105
offset_bottom = -0.999756
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("20_rpoks")

[node name="TextureRect" type="TextureRect" parent="ReturnButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.001
anchor_top = 0.01
anchor_right = 0.999
anchor_bottom = 0.99
offset_left = 0.28
offset_top = 2.0
offset_right = -0.280029
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("21_3ifbu")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ReturnButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Return"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="mainLayout/SelectionBox/HBoxContainer/clearAllButton" to="." method="_on_clear_all_button_pressed"]
[connection signal="pressed" from="mainLayout/SelectionBox/HBoxContainer/SelectAll" to="." method="_on_select_all_pressed"]
[connection signal="pressed" from="Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]

[editable path="mainLayout/SelectionBox/HBoxContainer/clearAllButton"]
[editable path="mainLayout/SelectionBox/HBoxContainer/SelectAll"]
[editable path="mainLayout/SelectionBox/cardSelection"]
